--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-    <script id="myID" type="text/x-handlebars-template">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script id="myID" type="text/x-handlebars-template">
       <p>Welcome to this website {{name}}</p>
     </script>
 
-    <title>Document</title>
+  <title>Document</title>
 </head>
 
 <body>
-    <div id="htmlSection"></div>
+  <div id="htmlSection"></div>
+  <script src="./main.js"></script>
 </body>
 
 </html>
